Fixed a lot of css. + made mobile responsive (for the most part). Hid the scroll bar via css - while still allowing scrolling. The only problem remaining on styling is on mobile scrolling to the side may occur accidentally due to scrollbar size factored in.

--- a/src/assets/styles/collapsable.css
+++ b/src/assets/styles/collapsable.css
@@ -138,3 +138,13 @@ button {
 .fairy {
   background-color: #e96ded;
 }
+@media (max-width: 820px) {
+  .collapsable .toggle {
+    width: 80%;
+  }
+  .button-container {
+    width: 300px;
+  }
+  .type-container {
+  }
+}
