--- a/src/assets/styles/moves.css
+++ b/src/assets/styles/moves.css
@@ -82,3 +82,30 @@
   color: red;
   margin-top: 40px;
 }
+
+@media (max-width: 767px) {
+  .moves-input {
+    position: relative;
+    cursor: text;
+    font-size: 14px;
+    line-height: 20px;
+    padding: 0 16px;
+    height: 48px;
+    width: 200px;
+    background-color: #fff;
+    border: 1px solid #d6d6e7;
+    border-radius: 3px;
+    color: rgb(35, 38, 59);
+    box-shadow: inset 0 1px 4px 0 rgb(119 122 175 / 30%);
+    overflow: hidden;
+    transition: all 100ms ease-in-out;
+  }
+  .move-accuracy {
+    display: flex;
+    font-size: 18px;
+  }
+  .move-power {
+    display: flex;
+    font-size: 18px;
+  }
+}
