--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap");
 body {
   background-color: #c0ebe6;
+  overflow-x: hidden;
 }
 a:hover {
   cursor: pointer;
@@ -13,7 +14,9 @@ a:hover {
   align-items: center;
   background-color: aliceblue;
   padding: 5px;
-  box-shadow: 0px 2px 3px 0.2px grey;
+  box-shadow: 0px 3px 3px 0.2px grey;
+  position: sticky;
+  width: 100vw;
 }
 .pokemon-paradise:hover {
   color: black;
@@ -44,4 +47,34 @@ a:hover {
 }
 .pikachu {
   margin: 10px;
+}
+
+@media (max-width: 767px) {
+  .navbar {
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+    padding: 5px;
+    box-shadow: 0px 2px 3px 0.2px grey;
+    width: 100vw;
+  }
+  h1 .hero-text {
+    text-align: center;
+  }
+  .pikachu {
+    display: none;
+  }
+  .logo-text {
+    display: none;
+  }
+  .left {
+    display: none;
+  }
+  .right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
