--- a/src/assets/styles/pokemon.css
+++ b/src/assets/styles/pokemon.css
@@ -4,6 +4,8 @@
 }
 body {
   background-color: var(--color-background);
+  overflow: auto;
+  overflow-x: hidden;
 }
 .pokemon-input-container {
   display: flex;
@@ -71,4 +73,25 @@ body {
   font-size: 1.4rem;
   color: red;
   margin-top: 40px;
+}
+@media (max-width: 820px) {
+  h3 {
+    text-align: center;
+  }
+  .pokemon-input {
+    position: relative;
+    cursor: text;
+    font-size: 14px;
+    line-height: 20px;
+    padding: 0 16px;
+    height: 48px;
+    width: auto;
+    background-color: #fff;
+    border: 1px solid #d6d6e7;
+    border-radius: 3px;
+    color: rgb(35, 38, 59);
+    box-shadow: inset 0 1px 4px 0 rgb(119 122 175 / 30%);
+    overflow: hidden;
+    transition: all 100ms ease-in-out;
+  }
 }
