--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,11 @@
 :root {
   --color-background: #c0ebe6;
   --color-type-background: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
